practice/service/redis-svc.yml
# cat redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-svc
  name: redis-svc
  namespace: job-2
spec:
  ports:
  - name: http
    port: 6379 
    protocol: TCP 
    targetPort: 6379
  selector:
    app: redis
  sessionAffinity: None
  type: NodePort
